--- a/index.html
+++ b/index.html
@@ -216,24 +216,24 @@
             }
 
             .counter-container h2 {
-                font-size: 1.3em; /* フォントサイズを少し小さく */
+                font-size: 1.8em; /* テキストサイズを調整 */
             }
 
             .count {
-                font-size: 1.8em; /* フォントサイズを少し小さく */
+                font-size: 2.5em; /* カウントのサイズを調整 */
             }
 
             .remaining {
-                font-size: 0.9em; /* フォントサイズを少し小さく */
+                font-size: 1.2em; /* 残りのテキストサイズを調整 */
             }
 
             .amount {
-                font-size: 1.1em; /* フォントサイズを少し小さく */
+                font-size: 1.4em; /* 金額のテキストサイズを調整 */
             }
 
             button {
-                padding: 14px 24px; /* ボタンサイズを保持 */
-                font-size: 1.1em; /* フォントサイズを少し小さく */
+                padding: 18px 32px; /* ボタンサイズを調整 */
+                font-size: 1.4em; /* ボタンのフォントサイズを調整 */
             }
         }
 
