--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
         @media (max-width: 768px) {
             #counters {
                 grid-template-columns: repeat(2, 1fr);
-                grid-gap: 20px;
+                grid-row-gap: 30px; /* 垂直間隔を広げる */
+                grid-column-gap: 20px; /* 水平間隔は変更しない */
                 justify-content: center;
             }
 
@@ -216,24 +217,24 @@
             }
 
             .counter-container h2 {
-                font-size: 1.8em; /* テキストサイズを調整 */
+                font-size: 1.4em; /* テキストサイズを少し小さく */
             }
 
             .count {
-                font-size: 2.5em; /* カウントのサイズを調整 */
+                font-size: 1.8em; /* カウントのサイズを少し小さく */
             }
 
             .remaining {
-                font-size: 1.2em; /* 残りのテキストサイズを調整 */
+                font-size: 0.9em; /* 残りのテキストサイズを少し小さく */
             }
 
             .amount {
-                font-size: 1.4em; /* 金額のテキストサイズを調整 */
+                font-size: 1.1em; /* 金額のテキストサイズを少し小さく */
             }
 
             button {
-                padding: 18px 32px; /* ボタンサイズを調整 */
-                font-size: 1.4em; /* ボタンのフォントサイズを調整 */
+                padding: 14px 24px; /* ボタンサイズを変更せず */
+                font-size: 1.1em; /* ボタンのフォントサイズを少し小さく */
             }
         }
 
