--- a/index.html
+++ b/index.html
@@ -194,14 +194,12 @@
                 grid-template-columns: repeat(2, 1fr);
                 grid-row-gap: 30px; /* 垂直間隔を広げる */
                 grid-column-gap: 20px; /* 水平間隔は変更しない */
-                justify-content: center; /* 横方向で中央揃え */
-                padding-left: 10%; /* 水平方向の位置を調整 */
-                padding-right: 10%; /* 水平方向の位置を調整 */
+                justify-content: center;
             }
 
             .counter-container {
                 max-width: 95%;
-                padding: 40px; /* フレームサイズを保持 */
+                padding: 20px; /* フレームサイズを保持 */
             }
 
             .charts-section {
