--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 grid-template-columns: repeat(2, 1fr);
                 grid-gap: 20px;
                 justify-content: center;
+                padding-left: 10%; /* カウンターの水平位置を中央に調整 */
             }
 
             .counter-container {
@@ -216,24 +217,24 @@
             }
 
             .counter-container h2 {
-                font-size: 1.8em; /* テキストサイズを調整 */
+                font-size: 1.5em; /* テキストサイズを少し小さく調整 */
             }
 
             .count {
-                font-size: 2.5em; /* カウントのサイズを調整 */
+                font-size: 2em; /* カウントのサイズを少し小さく調整 */
             }
 
             .remaining {
-                font-size: 1.2em; /* 残りのテキストサイズを調整 */
+                font-size: 1em; /* 残りのテキストサイズを少し小さく調整 */
             }
 
             .amount {
-                font-size: 1.4em; /* 金額のテキストサイズを調整 */
+                font-size: 1.1em; /* 金額のテキストサイズを少し小さく調整 */
             }
 
             button {
-                padding: 18px 32px; /* ボタンサイズを調整 */
-                font-size: 1.4em; /* ボタンのフォントサイズを調整 */
+                padding: 16px 28px; /* ボタンサイズを調整 */
+                font-size: 1.2em; /* ボタンのフォントサイズを少し小さく調整 */
             }
         }
 
@@ -537,3 +538,4 @@
     </script>
 </body>
 </html>
+
