--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             min-height: 100vh;
             margin: 0;
             padding: 20px;
@@ -30,7 +30,6 @@
             gap: 20px;
             width: 100%;
             max-width: 900px;
-            align-items: center;
         }
 
         #counters {
@@ -39,24 +38,15 @@
             grid-gap: 20px;
             padding: 20px;
             width: 100%;
-            justify-items: center;
-            justify-content: center;
         }
 
         .counter-container {
-            background: #fff;
-            color: #333;
+            background: white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            padding: 15px;
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
-            max-width: 180px;
-        }
-
-        .dark-mode .counter-container {
-            background: #333;
-            color: #fff;
         }
 
         .counter-container:hover {
@@ -64,7 +54,7 @@
         }
 
         .counter-container h2 {
-            font-size: 1.5em;
+            font-size: 1.2em;
             line-height: 1.5;
             font-weight: 600;
             margin: 0;
@@ -72,17 +62,17 @@
         }
 
         .count {
-            font-size: 2em;
+            font-size: 1.5em;
             margin: 10px 0;
         }
 
         .remaining {
-            font-size: 1em;
+            font-size: 0.9em;
             color: inherit;
         }
 
         .amount {
-            font-size: 1.2em;
+            font-size: 1em;
         }
 
         .button-group {
@@ -93,8 +83,8 @@
         }
 
         button {
-            padding: 16px 28px;
-            font-size: 1.2em;
+            padding: 14px 24px;
+            font-size: 20px;
             border: none;
             border-radius: 8px;
             background-color: #007BFF;
@@ -125,8 +115,7 @@
 
         .totals-container {
             margin-top: 20px;
-            background-color: #fff;
-            color: #333;
+            background-color: #ffffff;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -136,18 +125,13 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
-        .dark-mode .totals-container {
-            background: #333;
-            color: #fff;
-        }
-
         .total-title {
-            font-size: 1.5em;
+            font-size: 1.3em;
             margin-bottom: 10px;
         }
 
         .total-value {
-            font-size: 1.3em;
+            font-size: 1.1em;
         }
 
         .day-select {
@@ -158,11 +142,11 @@
 
         .day-select label {
             margin-right: 10px;
-            font-size: 1.2em;
+            font-size: 1em;
         }
 
         .current-day {
-            font-size: 1.7em;
+            font-size: 1.5em;
             margin-bottom: 20px;
             text-align: center;
             font-weight: bold;
@@ -188,7 +172,6 @@
             justify-content: center;
         }
 
-        /* 縦画面用のスタイル調整 */
         @media (max-width: 768px) {
             #counters {
                 grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
