--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             color: #333;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            padding: 30px; /* サイズを大きくするためのパディングの増加 */
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             max-width: 95%;
@@ -65,7 +65,7 @@
         }
 
         .counter-container h2 {
-            font-size: 1.5em;
+            font-size: 1.7em; /* フォントサイズを大きく */
             line-height: 1.5;
             font-weight: 600;
             margin: 0;
@@ -73,17 +73,17 @@
         }
 
         .count {
-            font-size: 1.7em;
+            font-size: 2em; /* フォントサイズを大きく */
             margin: 10px 0;
         }
 
         .remaining {
-            font-size: 1em;
+            font-size: 1.2em; /* フォントサイズを大きく */
             color: inherit;
         }
 
         .amount {
-            font-size: 1.2em;
+            font-size: 1.5em; /* フォントサイズを大きく */
         }
 
         .button-group {
@@ -94,8 +94,8 @@
         }
 
         button {
-            padding: 16px 28px;
-            font-size: 1.2em;
+            padding: 18px 32px; /* サイズを大きく */
+            font-size: 1.4em; /* フォントサイズを大きく */
             border: none;
             border-radius: 8px;
             background-color: #007BFF;
