--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
             max-width: 900px;
             align-items: center;
             box-sizing: border-box;
+            margin: 0 auto; /* 中央に配置 */
         }
 
         #counters {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-gap: 10px; /* カウンター間のスペースを調整 */
+            grid-gap: 10px;
             padding: 20px;
             width: 100%;
             max-width: 100%;
             justify-items: center;
             box-sizing: border-box;
+            margin: 0 auto; /* 中央に配置 */
         }
 
         .counter-container {
@@ -144,6 +146,7 @@
             max-width: 85%;
             transition: background-color 0.3s, color 0.3s;
             box-sizing: border-box;
+            margin: 0 auto; /* 中央に配置 */
         }
 
         .dark-mode .totals-container {
@@ -187,6 +190,7 @@
             max-width: 900px;
             padding: 20px;
             box-sizing: border-box;
+            margin: 0 auto; /* 中央に配置 */
         }
 
         .chart-container {
